--- a/public/css/sillybunny-theme.css
+++ b/public/css/sillybunny-theme.css
@@ -450,6 +450,14 @@ select.text_pole {
         height: 42px;
     }
 
+    /* Ensure hamburger menu matches other buttons */
+    #leftSendForm > div,
+    #rightSendForm > div {
+        width: 42px !important;
+        min-width: 42px !important;
+        height: 42px !important;
+    }
+
     #send_form .mes_stop {
         width: 52px;
         min-width: 52px;
